[metadata]
name = PyMOTW-3
description-file = README.rst
author = Doug Hellmann
author-email = doug@doughellmann.com
summary = Python Module of the Week, 3
home-page = http://pymotw.com/3
classifier =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Intended Audience :: Developers
    Environment :: Console

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
# packages =
#     stevedore
